# RCE

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  object.cpp  object.h
components/: all.h  children_component.cpp  children_component.h  component.h  hitbox_component.cpp  hitbox_component.h
examples/break_the_blocks/: break_the_blocks.cpp
examples/break_the_blocks/components/: mini_physics_component.cpp  mini_physics_component.h
examples/break_the_blocks/lib/: util.h
examples/break_the_blocks/scenes/: break_the_blocks_scene.cpp  break_the_blocks_scene.h  start_menu_scene.cpp  start_menu_scene.h  you_lost_scene.h
examples/break_the_blocks/systems/: gen_cubes_system.cpp  gen_cubes_system.h
examples/platformer/: platformer.cpp
examples/platformer/components/: physics_component.cpp  physics_component.h
examples/platformer/objects/: orb_object.cpp  orb_object.h
examples/platformer/scene/: play_scene.cpp  play_scene.h
examples/pong/: pong.cpp
examples/pong/components/: mini_physics_component_p.cpp  mini_physics_component_p.h
examples/pong/scenes/: play_menu_scene.h  pong_scene.cpp  pong_scene.h  settings_scene.h  win_scene.h
examples/pong/util/: settings_data.h
include/rce/: object.cpp  object.h
include/rce/components/: all.h  component.h  find_object_component.cpp  find_object_component.h  hitbox_component.cpp  hitbox_component.h
include/rce/object_components/: all.h  children_component.cpp  children_component.h  find_object_component.cpp  find_object_component.h  hitbox_component.cpp  hitbox_component.h  object_component.cpp  object_component.h
include/rce/objects/: abstract_object.cpp  abstract_object.h  circle_object.h  object.cpp  object.h  rectangle_object.cpp  rectangle_object.h  sprite_object.cpp  sprite_object.h  text_object.cpp  text_object.h
include/rce/objects/interactive/: interactive_object.h  rectangle_button.h
include/rce/objects/interactive/buttons/: abstract_button.h  rectangle_button.h
include/rce/objects/interactive/switches/: abstract_switch.h  rectangle_switch.h
include/rce/objects/interactive/text_boxs/: rectangle_textbox.h  text_box.cpp  text_box.h
include/rce/objects/shape/: circle_object.cpp  circle_object.h  rectangle_object.cpp  rectangle_object.h
include/rce/scene_components/: dt_ratio_scene_component.cpp  dt_ratio_scene_component.h  scene_component.h
include/rce/scenes/: ex_scene.cpp  example_scene.h  scene.cpp  scene.h
include/rce/scenes/examples/: example_scene.cpp  example_scene.h
include/rce/scenes/test/: test_scene.cpp  test_scene.h
include/rce/scenes/util/: dt_ratio_scene.cpp  dt_ratio_scene.h
include/rce/systems/: interactive_object_system.cpp  interactive_objects_system.h  system.cpp  system.h  text_system.cpp  text_system.h
include/rce/util/: property.h  tags.h
scenes/: ex_scene.cpp  ex_scene.h  example_scene  scene.cpp  scene.h
